testsets/lambda/stderr/test-lambda.stderr
llc: error: llc: testsets/lambda/llvm/test-lambda.ll:131:9: error: stored value and pointer type do not match
  store i1 %logOR, i32* %if-res-ptr, align 1
        ^
